# Audigest

./: .env.example  .gitignore  .pre-commit-config.yaml  Design.md  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  models.py
backend/api/: routes.py  schemas.py
backend/core/: config.py  database.py  queue.py  utils.py
backend/prompts/: summary_detail.md
backend/services/: downloader.py  llm_factory.py  storage.py  summarizer.py  transcriber.py  url_parser.py
backend/worker/: main.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/: api.ts  main.ts
frontend/src/router/: index.ts
frontend/src/views/: DashboardView.vue  DetailView.vue  HomeView.vue
