[project]
name = "audigest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "whisperx>=3.7.4",
    "yt-dlp>=2025.11.12",
    "torch",
    "torchvision",
    "torchaudio",
    "dotenv>=0.9.9",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
# pyproject.toml

[tool.ruff]
# 忽略一些文件夹
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "data",
]
# 单行最大长度
line-length = 256

[tool.ruff.lint]
# 开启的规则集
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflakes
# I: isort
select = ["E", "W", "F", "I"]

# 忽略的规则 (根据需要添加)
ignore = []
